--- a/templates/login.html
+++ b/templates/login.html
@@ -22,8 +22,8 @@ body {
 
 <body>
 
-<p><img src="Burberry.png" width="238" height="82" alt=""/></p>
-<p><span style="text-align: center"><img src="fondo1.jpg" width="1318" height="277" alt=""/></span></p>
+<p><img src="../static/img/Burberry.png" width="238" height="82" alt=""/></p>
+<p><span style="text-align: center"><img src="../static/img/fondo1.jpg" width="1318" height="277" alt=""/></span></p>
 <p><em>INICIAR SESION</em></p>
 <div id="container">
   <p>Email <span style="text-align: center">
