Actualizacion de URL de imagenes y estilos

--- a/templates/Comentarios.html
+++ b/templates/Comentarios.html
@@ -35,7 +35,7 @@ body {
 <body>
 <form name="frm01" id="frm01" method="post" action="" >
 <div>
-  <img src="images/Burberry.png" width="256" height="109" alt=""/><img style="margin-left: 920px; margin-top: 26px;" src="images/user_icon-icons.com_57997.png" width="45" height="58" alt=""/>
+  <img src="../static/img/Burberry.png" width="256" height="109" alt=""/><img style="margin-left: 920px; margin-top: 26px;" src="images/user_icon-icons.com_57997.png" width="45" height="58" alt=""/>
 </div>
 	<hr />
     <h2>Gestión de comentarios</h2>
