--- a/templates/ListaDeDeseos.html
+++ b/templates/ListaDeDeseos.html
@@ -17,7 +17,7 @@ body {
 
 <body>
 <div>
-  <img src="images/Burberry.png" width="256" height="109" alt=""/><img style="margin-left: 650px; margin-top: 06px;" src="images/user_icon-icons.com_57997.png" width="45" height="58" alt=""/><img style="margin-left: 50px; margin-top: 16px;" src="images/shopping_bag_icon_150277.png" width="72" height="72" alt=""/>
+  <img src="../static/img/Burberry.png" width="256" height="109" alt=""/><img style="margin-left: 650px; margin-top: 06px;" src="images/user_icon-icons.com_57997.png" width="45" height="58" alt=""/><img style="margin-left: 50px; margin-top: 16px;" src="images/shopping_bag_icon_150277.png" width="72" height="72" alt=""/>
 </div>
 	<div>
 		<hr>
@@ -26,7 +26,7 @@ body {
 <table width="926" border="1">
   <tbody>
     <tr>
-      <td width="321"><img src="images/187-1876564_12v-computer-monitor-24-fhd-png-download-.png" width="321" height="258" alt=""/></td>
+      <td width="321"><img src="../static/img/187-1876564_12v-computer-monitor-24-fhd-png-download-.png" width="321" height="258" alt=""/></td>
       <td width="261" style="font-size: 16px"><p style="text-align: left; color: #0A3FD0; font-style: normal; font-size: 16px;">SAMSUNG<br>
       Monitor 24&quot; Full HD</p></td>
       <td width="158" style="font-size: 16px"><p>Precio<br>
@@ -36,7 +36,7 @@ body {
       <p>&nbsp;</p></td>
     </tr>
     <tr>
-      <td>&nbsp;<img src="images/6782795_preview.png" width="318" height="227" alt=""/></td>
+      <td>&nbsp;<img src="../static/img/6782795_preview.png" width="318" height="227" alt=""/></td>
       <td style="font-size: 16px"><p>DELL<br>
       Computador portatil 14&quot; 8 GB 1T SSD</p></td>
       <td style="font-size: 16px"><p>Precio<br>
