--- a/templates/PaginaPrincipal.html
+++ b/templates/PaginaPrincipal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>eCommerce template By Adobe Dreamweaver</title>
+<title>Principal</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="../eCommerceAssets/styles/eCommerceStyle.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
@@ -12,13 +12,13 @@
 <body>
 <div id="mainWrapper">
 <header class="Cabezera">
-  <div class="Logo"> <img src="../Burberry.png" width="240" height="89" alt=""/>
+  <div class="Logo"> <img src="../static/img/Burberry.png" width="240" height="89" alt=""/>
 <label for="label">Search:</label>
     <input name="Search" type="search" id="Search">
     <img src="../add-to-cart-icon-adding-shopping-cart-well-organized-fully-editable-add-to-cart-icon-adding-shopping-cart-any-use-like-167547952.jpg" width="64" height="76" alt=""/><img src="../images.png" width="51" height="64" alt=""/>
     <div class="Menu">
       <ul>
-        <li><a href="Index.html">Inicio</a></li>
+        <li><a href="../templates/PaginaPrincipal.html">Inicio</a></li>
         <li><a href="#">Televisores</a></li>
         <li><a href="#">Computadores</a></li>
         <li><a href="#">Gamming</a></li>
