Se actualizaron y agregaron estilos

--- a/templates/Register.html
+++ b/templates/Register.html
@@ -30,7 +30,7 @@ body p {
 </head>
 
 <body>
-<p><img src="Burberry.png" width="222" height="87" alt=""/><img src="tecnologia.png" width="1225" height="300" alt=""/></p>
+<p><img src="../static/img/Burberry.png" width="222" height="87" alt=""/><img src="../static/img/tecnologia.png" width="1225" height="300" alt=""/></p>
 <p>REGISTRARSE</p>
 <div class="container">
   <p>
