--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -52,7 +52,7 @@
 								<i class="zmdi zmdi-case"></i>
 							</div>
 							<div class="navLateral-body-cr">
-								ADMINISTRATION
+								GESTION
 							</div>
 							<span class="zmdi zmdi-chevron-left"></span>
 						</a>
@@ -63,40 +63,11 @@
 										<i class="zmdi zmdi-balance"></i>
 									</div>
 									<div class="navLateral-body-cr">
-										COMPANY
+										HISTORIAL MES
 									</div>
 								</a>
 							</li>
-							<li class="full-width">
-								<a href="providers.html" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-truck"></i>
-									</div>
-									<div class="navLateral-body-cr">
-										PROVIDERS
-									</div>
-								</a>
-							</li>
-							<li class="full-width">
-								<a href="payments.html" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-card"></i>
-									</div>
-									<div class="navLateral-body-cr">
-										PAYMENTS
-									</div>
-								</a>
-							</li>
-							<li class="full-width">
-								<a href="categories.html" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-label"></i>
-									</div>
-									<div class="navLateral-body-cr">
-										CATEGORIES
-									</div>
-								</a>
-							</li>
+						
 						</ul>
 					</li>
 					<li class="full-width divider-menu-h"></li>
@@ -106,7 +77,7 @@
 								<i class="zmdi zmdi-face"></i>
 							</div>
 							<div class="navLateral-body-cr">
-								USERS
+								TABLAS USUARIOS
 							</div>
 							<span class="zmdi zmdi-chevron-left"></span>
 						</a>
@@ -117,7 +88,7 @@
 										<i class="zmdi zmdi-account"></i>
 									</div>
 									<div class="navLateral-body-cr">
-										ADMINISTRATORS
+										ADMINISTRADORES
 									</div>
 								</a>
 							</li>
@@ -127,7 +98,7 @@
 										<i class="zmdi zmdi-accounts"></i>
 									</div>
 									<div class="navLateral-body-cr">
-										CLIENT
+										CLIENTE
 									</div>
 								</a>
 							</li>
@@ -140,21 +111,12 @@
 								<i class="zmdi zmdi-washing-machine"></i>
 							</div>
 							<div class="navLateral-body-cr">
-								PRODUCTS
+								TOPS PRODUCTOS
 							</div>
 						</a>
 					</li>
 					<li class="full-width divider-menu-h"></li>
-					<li class="full-width">
-						<a href="sales.html" class="full-width">
-							<div class="navLateral-body-cl">
-								<i class="zmdi zmdi-shopping-cart"></i>
-							</div>
-							<div class="navLateral-body-cr">
-								SALES
-							</div>
-						</a>
-					</li>
+					
 					<li class="full-width divider-menu-h"></li>
 					<li class="full-width">
 						<a href="inventory.html" class="full-width">
@@ -162,44 +124,11 @@
 								<i class="zmdi zmdi-store"></i>
 							</div>
 							<div class="navLateral-body-cr">
-								INVENTORY
+								TABLA PRODUCTOS
 							</div>
 						</a>
 					</li>
-					<li class="full-width divider-menu-h"></li>
-					<li class="full-width">
-						<a href="#!" class="full-width btn-subMenu">
-							<div class="navLateral-body-cl">
-								<i class="zmdi zmdi-wrench"></i>
-							</div>
-							<div class="navLateral-body-cr">
-								SETTINGS
-							</div>
-							<span class="zmdi zmdi-chevron-left"></span>
-						</a>
-						<ul class="full-width menu-principal sub-menu-options">
-							<li class="full-width">
-								<a href="#!" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-widgets"></i>
-									</div>
-									<div class="navLateral-body-cr">
-										OPTION
-									</div>
-								</a>
-							</li>
-							<li class="full-width">
-								<a href="#!" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-widgets"></i>
-									</div>
-									<div class="navLateral-body-cr">
-										OPTION
-									</div>
-								</a>
-							</li>
-						</ul>
-					</li>
+					
 				</ul>
 			</nav>
 		</div>
