Modificación de estilos de la dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -167,47 +167,47 @@
 		</section>
 		<div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
 			<div class="mdl-tabs__tab-bar">
-				<a href="#tabNewAdmin" class="mdl-tabs__tab is-active">NEW</a>
-				<a href="#tabListAdmin" class="mdl-tabs__tab">LIST</a>
+				<a href="#tabNewAdmin" class="mdl-tabs__tab is-active">NUEVO</a>
+				<a href="#tabListAdmin" class="mdl-tabs__tab">LISTA</a>
 			</div>
 			<div class="mdl-tabs__panel is-active" id="tabNewAdmin">
 				<div class="mdl-grid">
 					<div class="mdl-cell mdl-cell--12-col">
 						<div class="full-width panel mdl-shadow--2dp">
 							<div class="full-width panel-tittle bg-primary text-center tittles">
-								New Administrator
+								NUEVO ADMINISTRATOR
 							</div>
 							<div class="full-width panel-content">
 								<form>
 									<div class="mdl-grid">
 										<div class="mdl-cell mdl-cell--12-col">
-									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; DATA ADMINISTRATOR</legend><br>
+									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; DATOS ADMINISTRADOR</legend><br>
 									    </div>
 									    <div class="mdl-cell mdl-cell--12-col">
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="number" pattern="-?[0-9]*(\.[0-9]+)?" id="DNIAdmin">
-												<label class="mdl-textfield__label" for="DNIAdmin">DNI</label>
+												<label class="mdl-textfield__label" for="DNIAdmin">Nº D.</label>
 												<span class="mdl-textfield__error">Invalid number</span>
 											</div>
 									    </div>
 									    <div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-záéíóúÁÉÍÓÚ ]*(\.[0-9]+)?" id="NameAdmin">
-												<label class="mdl-textfield__label" for="NameAdmin">Name</label>
+												<label class="mdl-textfield__label" for="NameAdmin">Nombre</label>
 												<span class="mdl-textfield__error">Invalid name</span>
 											</div>
 									    </div>
 										<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-záéíóúÁÉÍÓÚ ]*(\.[0-9]+)?" id="LastNameAdmin">
-												<label class="mdl-textfield__label" for="LastNameAdmin">Last Name</label>
+												<label class="mdl-textfield__label" for="LastNameAdmin">Apellido</label>
 												<span class="mdl-textfield__error">Invalid last name</span>
 											</div>
 										</div>
 										<div class="mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet">
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="tel" pattern="-?[0-9+()- ]*(\.[0-9]+)?" id="phoneAdmin">
-												<label class="mdl-textfield__label" for="phoneAdmin">Phone</label>
+												<label class="mdl-textfield__label" for="phoneAdmin">Telefono</label>
 												<span class="mdl-textfield__error">Invalid phone number</span>
 											</div>
 										</div>
@@ -221,60 +221,29 @@
 										<div class="mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet">
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text" id="addressAdmin">
-												<label class="mdl-textfield__label" for="addressAdmin">Address</label>
+												<label class="mdl-textfield__label" for="addressAdmin">Direccion</label>
 												<span class="mdl-textfield__error">Invalid address</span>
 											</div>
 										</div>
 										<div class="mdl-cell mdl-cell--12-col">
-									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; ACCOUNT DETAILS</legend><br>
+									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; DETALLES CUENTA</legend><br>
 									    </div>
 										<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-z0-9áéíóúÁÉÍÓÚ]*(\.[0-9]+)?" id="UserNameAdmin">
-												<label class="mdl-textfield__label" for="UserNameAdmin">User Name</label>
+												<label class="mdl-textfield__label" for="UserNameAdmin">Nombre usuario</label>
 												<span class="mdl-textfield__error">Invalid user name</span>
 											</div>
 										</div>
 										<div class="mdl-cell mdl-cell--6-col mdl-cell--8-col-tablet">
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="password" id="passwordAdmin">
-												<label class="mdl-textfield__label" for="passwordAdmin">Password</label>
+												<label class="mdl-textfield__label" for="passwordAdmin">Contraseña</label>
 												<span class="mdl-textfield__error">Invalid password</span>
 											</div>
 										</div>
-										<div class="mdl-cell mdl-cell--12-col">
-									        <legend class="text-condensedLight"><i class="zmdi zmdi-border-color"></i> &nbsp; CHOOSE AVATAR</legend><br>
-									    </div>
 										<div class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet">
-											<div class="mdl-grid">
-												<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-													<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-														<input type="radio" id="option-1" class="mdl-radio__button" name="options" value="avatar-male.png">
-														<img src="assets/img/avatar-male.png" alt="avatar" style="height: 45px;" width="45px;">
-														<span class="mdl-radio__label">Avatar 1</span>
-													</label>
-											    </div>
-											    <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-													<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-														<input type="radio" id="option-2" class="mdl-radio__button" name="options" value="avatar-female.png">
-														<img src="assets/img/avatar-female.png" alt="avatar" style="height: 45px;" width = "45px;">
-														<span class="mdl-radio__label">Avatar 2</span>
-													</label>
-											    </div>
-											    <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-													<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-														<input type="radio" id="option-3" class="mdl-radio__button" name="options" value="avatar-male2.png">
-														<img src="assets/img/avatar-male2.png" alt="avatar" style="height: 45px;" width = "45px;">
-														<span class="mdl-radio__label">Avatar 3</span>
-													</label>
-											    </div>
-											    <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-													<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-4">
-														<input type="radio" id="option-4" class="mdl-radio__button" name="options" value="avatar-female2.png">
-														<img src="assets/img/avatar-female2.png" alt="avatar" style="height: 45px;" width="45px;>
-														<span class="mdl-radio__label">Avatar 4</span>
-													</label>
-											    </div>
+											<div class="mdl-grid">   
 											</div>
 										</div>
 									</div>
@@ -282,7 +251,7 @@
 										<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored bg-primary" id="btn-addAdmin">
 											<i class="zmdi zmdi-plus"></i>
 										</button>
-										<div class="mdl-tooltip" for="btn-addAdmin">Add Administrator</div>
+										<div class="mdl-tooltip" for="btn-addAdmin">Agregar Administrator</div>
 									</p>
 								</form>
 							</div>
