--- a/static/css/main.css
+++ b/static/css/main.css
@@ -239,7 +239,7 @@ html, body{
     text-align: center;
     font-size: 20px;
     color: #fff;
-    background-color: #D9534F;
+    background-color: #0026ff;
     border-radius: 50%;
 }
 .Notification-text{
@@ -290,7 +290,8 @@ html, body{
 }
 /*=============Estilos barra superior*/
 .navBar{
-	background-color: var(--primary-color);
+	/*background-color: var(--primary-color);*/
+	background-color: rgb(16, 12, 250);
 	height: 45px;
 	color: #fff;
 }
